[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Interface/Interface_menu_load_game_profil_selected.gd" type="Script" id=1]

[node name="Interface_menu_load_game_profil_selected" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button_exit" type="Button" parent="."]
margin_left = 63.0
margin_top = 67.0
margin_right = 250.0
margin_bottom = 158.0
text = "EXIT"

[node name="Button_load_1" type="Button" parent="."]
margin_left = 406.0
margin_top = 65.0
margin_right = 594.0
margin_bottom = 147.0
text = "LOAD_1"

[node name="Button_load_2" type="Button" parent="."]
margin_left = 402.0
margin_top = 171.0
margin_right = 603.0
margin_bottom = 258.0
text = "LOAD_2"

[node name="Button_load_3" type="Button" parent="."]
margin_left = 411.0
margin_top = 302.0
margin_right = 613.0
margin_bottom = 392.0
text = "LOAD_3"

[node name="Button_load_4" type="Button" parent="."]
margin_left = 400.0
margin_top = 427.0
margin_right = 614.0
margin_bottom = 542.0
text = "LOAD_4"

[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="pressed" from="Button_load_1" to="." method="_on_Button_load_1_pressed"]
[connection signal="pressed" from="Button_load_2" to="." method="_on_Button_load_2_pressed"]
[connection signal="pressed" from="Button_load_3" to="." method="_on_Button_load_3_pressed"]
[connection signal="pressed" from="Button_load_4" to="." method="_on_Button_load_4_pressed"]
